# dash-fn-form

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
examples/: interact.py  ipywidgets_interact.ipynb  page_explicit.py  page_implicit.py
examples/dash/: mpl_export.py
src/dash_fn_form/: __init__.py  _field_components.py  _form_layouts.py  _forms.py  _renderers.py  _spec.py  fn_interact.py  layout.py  utils.py
src/dash_fn_interact/: __init__.py  _config_builder.py  _field_components.py  _forms.py  _interact.py  _page.py  _spec.py  page.py
src/dash_fn_tools/: _config_builder.py  _spec.py
src/s5ndt/: __init__.py  config_builder.py  fig_export.py  mpl_export.py  wizard.py
tests/: conftest.py  test_smoke.py
tests/dash_capture/: test_strategies.py
tests/dash_fn_form/: test_coerce_validate.py  test_dbc_fields.py  test_declarative_form.py  test_dmc_fields.py  test_field_components.py  test_fn_interact.py  test_forms.py  test_layout.py  test_no_default.py  test_read_only.py  test_renderers.py  test_sections.py  test_spec.py  test_utils.py  test_visibility_extended.py
tests/dash_fn_interact/: test_forms.py
tests/integration/: test_capture_integration.py  test_fn_panel_integration.py  test_form_callbacks_integration.py
